# votup-back

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  magic_urn.conf  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  votup.conf
account/: actions.py  choices.py  exceptions.py  filters.py  managers.py  messages.py  models.py  params_serializer.py  serializers.py  urls.py  viewset.py
account/migrations/: 0001_initial.py  0002_initial_user.py
compose/: docker-compose-deploy.yml  docker-compose.yml
core/: actions.py  apps.py  behaviors.py  exceptions.py  filters.py  helpers.py  managers.py  mixins.py  models.py  params_serializer.py  receivers.py  serializers.py  urls.py  utils.py  viewset.py
core/domain/: candidate.py  plate.py  plate_user.py  voter.py  voting_plate.py
core/dto/: candidate_dto.py  plate_dto.py  plate_user_dto.py  voter_dto.py  voting_plate_dto.py
core/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_candidate_avatar_url.py  0003_alter_votinguser_plate_and_more.py  0003_remove_candidate_avatar.py  0004_alter_user_cellphone_alter_voting_description.py  0005_create_extension_citext.py  0006_alter_plate_name_alter_user_email_and_more.py  0007_alter_plate_name_alter_user_cellphone_and_more.py  (+7 more)
magic_urn/: asgi.py  settings.py  urls.py  wsgi.py
reports/: VotosPorEventoVotacao.jrxml  VotosPorEventoVotacaoPorChapa.jrxml  VotosPorEventoVotacaoProvisoria.jrxml  votor_por_provisorio.py  votos_por_chapa.py  votos_por_votacao.py
votup/: asgi.py  settings.py  urls.py  wsgi.py
(+31 files in other folders)
